--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "iclasser": "./index.js"
+  },
   "keywords": [],
   "author": "iClasser",
   "license": "ISC",
