--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "iclasser-cli",
-  "version": "1.0.1",
+  "version": "1.0.3",
+  "type": "module",
   "description": "iClasser command line tool",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./ --ext .js,.jsx.json"
   },
   "bin": {
     "iclasser": "./index.js"
@@ -18,6 +20,7 @@
     "url": "git+https://github.com/iClasser/iclasser-cli"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "fs-extra": "^11.2.0",
     "inquirer": "^9.2.16",
     "simple-git": "^3.23.0"
